# onipkg_tutor_app_knowledgebase

./: README.md  README.rst  boot_django.py  makemigrations.py  setup.cfg
knowledgebase/: admin.py  apps.py  urls.py  views.py
knowledgebase/api/: routes.py  serializers.py  views.py
knowledgebase/migrations/: 0001_initial.py  0002_course_coursesection_lecture_sectionfile_sectionvideo.py  0003_auto_20210914_0836.py  0004_auto_20210914_0931.py  0005_auto_20210924_1527.py  0006_auto_20211021_1348.py  0007_alter_sectionfile_file.py  0008_auto_20211118_1332.py  0009_auto_20211123_1406.py  0010_auto_20220217_0847.py  0011_alter_course_categories.py  0012_alter_course_categories.py  0013_auto_20220721_1647.py  0014_alter_course_categories_usertutorialread.py  0015_course_thumbnail_landscape_alter_course_thumbnail.py
knowledgebase/models/: __init__.py  base.py
knowledgebase/utils/: cons.py  permissions.py
onipkg_tutor_app_knowledgebase.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: makemigrations.py  mock_settings.py
