[metadata]
name = onipkg_tutor_app_knowledgebase
version = 1.0
description = A Django app to modularize the Knowledgebase Tooltor app
long_description = file: README.rst
url = https://www.example.com/
author = Daniel
author_email = daniel.santana@onimusic.com.br
license = BSD-3-Clause  # Example license
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django >= 3.2
    onipkg-contrib >= 0.8
    django-nested-admin >= 4.0.2
    django-ckeditor >= 6.5.1
